# JSB

./: .dockerignore  .env.example  .gitignore  Deployment.md  Dockerfile  README.md  cleanup_azure.sh  deploy_all.sh  deploy_custom_url.sh  deploy_utils.sh  pyproject.toml  requirements.txt  verify_env.py
client_slack/: bot.py  requirements.txt
client_streamlit/: app.py  app2.py  prompts.py  requirements.txt
server/: main.py  prompts.py  requirements.txt
server/tools/: jobs.py  jobs2.py  resume.py  web_scraper.py
